# thesis

./: .aliases  .gitignore  LICENSE  README.md  generate_data.sh  run.sh
cpp_tpch_q6/: CMakeLists.txt  add.cu  notes.txt  q6.cpp  q6.cu
cpp_tpch_q6/apps/: CMakeLists.txt  q6.cu
cpp_tpch_q6/include/: gpu_kernels.h  parser.hpp
cpp_tpch_q6/src/: CMakeLists.txt  defs.hpp  gpu_kernels.cu  parser.cpp  q6.cu
data/: dbgen
notes/: thesis-topic.md
notes/meeting/: latest.md
notes/paper/: co-processing.md  nebulastream.md
reports/: alloc_1_1.nsys-rep  alloc_256.nsys-rep  cpu_cuda.nsys-rep  gpu_2stream.nsys-rep  gpu_4stream.nsys-rep  gpu_nostream.nsys-rep  managed_1_1.nsys-rep  managed_256.nsys-rep  no_thread_coproc.nsys-rep  streams.nsys-rep  thread_coproc.nsys-rep  unified.nsys-rep
unified_queue/: CMakeLists.txt  notes.md
unified_queue/include/: cpu_kernels.hpp  data_types.hpp  defs.hpp  gpu_kernels.h  task.h  task.hpp  task_generator.h  task_generator.hpp  task_manager.hpp
unified_queue/src/: CMakeLists.txt  cpu_kernels.cpp  gpu_kernels.cu  main.cpp  parser.cpp  q6.cu  task.cu  task_generator.cpp  task_generator.cu  task_manager.cpp  test.cu
